--- a/styles/style.scss
+++ b/styles/style.scss
@@ -446,9 +446,8 @@ section {
       box-shadow: var(--box-shadow);
       border: var(--border);
 
-
-      &:hover img{
-           transform: translateY(-1rem);
+      &:hover img {
+        transform: translateY(-1rem);
       }
 
       img {
@@ -462,7 +461,67 @@ section {
       }
 
       p {
-        @include graphText(1.4rem)
+        @include graphText(1.4rem);
+      }
+    }
+  }
+}
+
+// Projects
+
+.projects {
+  background: var(--black);
+
+  .heading {
+    color: var(--white);
+  }
+  .box-container {
+    @include grid(40rem);
+
+    .box {
+      cursor: initial;
+
+      &:hover .image img {
+        transform: scale(1.1);
+      }
+
+      .image {
+        height: 40rem;
+        overflow: hidden;
+
+        img {
+          height: 100%;
+          width: 100%;
+          object-fit: cover;
+        }
+      }
+
+      .content {
+        display: flex;
+        background: var(--white);
+        justify-content: space-between;
+
+        .info {
+          padding: 1rem 2rem;
+
+          h3 {
+            @include titleText(1.7rem);
+          }
+
+          p {
+            @include graphText(1.5rem);
+          }
+        }
+
+        i {
+          width: 7.5rem;
+          font-size: 3rem;
+          background: var(--yellow);
+          color: var(--white);
+          cursor: pointer;
+          text-align: center;
+          line-height: 7.5rem;
+        }
       }
     }
   }
