--- a/styles/style.scss
+++ b/styles/style.scss
@@ -18,7 +18,6 @@
   outline: none;
   border: none;
   text-decoration: none;
-  transition: all 0.2s linear;
 }
 
 @mixin grid($val) {
@@ -93,6 +92,7 @@ section {
   cursor: pointer;
   font-size: 1.7rem;
   text-transform: capitalize;
+  transition: 0.2s linear;
 
   &:hover {
     background: var(--yellow);
@@ -448,11 +448,13 @@ section {
 
       &:hover img {
         transform: translateY(-1rem);
+       
       }
 
       img {
         height: 7rem;
         margin-bottom: 0.5rem;
+        transition: 0.2s linear;
       }
 
       h3 {
@@ -493,6 +495,7 @@ section {
           height: 100%;
           width: 100%;
           object-fit: cover;
+          transition: 0.2s linear;
         }
       }
 
@@ -621,6 +624,54 @@ section {
           padding: 1rem 0;
           @include graphText(1.4rem);
         }
+      }
+    }
+  }
+}
+
+// Contact
+
+.contact {
+  background: var(--black);
+  .heading {
+    color: var(--white);
+  }
+
+  .row {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 2rem;
+
+    .map {
+      flex: 1 1 41rem;
+      width: 100%;
+    }
+
+    form {
+      flex: 1 1 41rem;
+      background: var(--white);
+      padding: 2rem;
+
+      h3 {
+        @include titleText(2.5rem);
+      }
+
+      .box {
+        margin: 0.7rem 0;
+        width: 100%;
+        padding: 1.5rem 0;
+        border-bottom: var(--border);
+        font-size: 1.6rem;
+        color: var(--light-color);
+
+        &:focus {
+          border-color: var(--yellow);
+        }
+      }
+
+      textarea {
+        height: 15rem;
+        resize: none;
       }
     }
   }
