client section complete

--- a/styles/style.css
+++ b/styles/style.css
@@ -668,6 +668,15 @@ section {
   line-height: 2;
 }
 
+.logo-container {
+  text-align: center;
+}
+.logo-container img {
+  height: 10rem;
+  pointer-events: none;
+  user-select: none;
+}
+
 @media screen and (max-width: 1200px) {
   .header {
     padding: 1.5rem 2rem;
