--- a/styles/style.scss
+++ b/styles/style.scss
@@ -730,6 +730,25 @@ section {
   }
 }
 
+// Footer
+.footer {
+  text-align: center;
+
+  .links .btn {
+    margin: 0.5rem;
+  }
+
+  .credit {
+    @include titleText(2rem);
+    margin-top: 2rem;
+    padding-top: 1rem;
+
+    span {
+      color: var(--yellow);
+    }
+  }
+}
+
 // Media screen
 @media screen and(max-width: 1200px) {
   .header {
